updated listTextStyle in css to avoid overflow

--- a/src/ComponentsTodos/todos.module.css
+++ b/src/ComponentsTodos/todos.module.css
@@ -4,7 +4,7 @@ body{
 .mainTodo{
     display: flex;
     flex-direction: column;
-    width: 24%;
+    max-width: 24%;
     min-height: 400px;
     margin: auto;
     margin-top: 4rem;
@@ -47,13 +47,19 @@ body{
     border-radius: 6px;
     height: 40px; */
 
-    height:30px;
-    width:86%;
+    min-height:30px;
+    min-width:86%;
     padding-left:10px;
     border-radius: 4px;
     border:none;outline:none;
     text-align: center;
     font-size: medium;
+}
+
+.addInput{
+    inline-size: 180px;
+    overflow-wrap: break-word;
+
 }
 
 /* .listDivWidth{
@@ -64,7 +70,7 @@ body{
 
 .listItems{
     min-height:30px;
-    width:90%;
+    max-width:90%;
     /* padding-left:10px; */
     border-radius: 4px;
     border:none;outline:none;
@@ -78,7 +84,6 @@ body{
     box-sizing: border-box;
     margin: auto;
     margin-top: 4px;
-
 }
 
 .addbutton{
@@ -131,4 +136,10 @@ body{
 .checkStyle, .listTextStyle{
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.listTextStyle{
+    inline-size: 180px;
+    overflow-wrap: break-word;
+
 }
